2011-09-16  chandra shekar v  <chandra.vallala@motorola.com>

        [chromium] compilation failed in target 'webkit_unit_tests'.
        https://bugs.webkit.org/show_bug.cgi?id=68078

        Reviewed by Adam Barth.

        * tests/WebFrameTest.cpp:
        (WebKit::TestReloadDoesntRedirectWebFrameClient::decidePolicyForNavigation):

2011-09-16  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r95312.
        http://trac.webkit.org/changeset/95312
        https://bugs.webkit.org/show_bug.cgi?id=68277

        It's innocent, innocent I tell you! (Requested by jamesr_ on
        #webkit).

        * tests/CCLayerTreeHostTest.cpp:
        (WTF::TestHooks::beginCommitOnCCThread):
        (WTF::TestHooks::commitCompleteOnCCThread):
        (WTF::TestHooks::drawLayersOnCCThread):
        (WTF::MockLayerTreeHostImpl::create):
        (WTF::MockLayerTreeHostImpl::beginCommit):
        (WTF::MockLayerTreeHostImpl::commitComplete):
        (WTF::MockLayerTreeHostImpl::drawLayers):
        (WTF::MockLayerTreeHostImpl::MockLayerTreeHostImpl):
        (WTF::MockLayerTreeHost::create):
        (WTF::MockLayerTreeHost::createLayerTreeHostImpl):
        (WTF::MockLayerTreeHost::MockLayerTreeHost):
        (WTF::CompositorMockWebGraphicsContext3D::create):
        (WTF::CompositorMockWebGraphicsContext3D::makeContextCurrent):
        (WTF::CompositorMockWebGraphicsContext3D::createProgram):
        (WTF::CompositorMockWebGraphicsContext3D::createShader):
        (WTF::CompositorMockWebGraphicsContext3D::getShaderiv):
        (WTF::CompositorMockWebGraphicsContext3D::getProgramiv):
        (WTF::CompositorMockWebGraphicsContext3D::CompositorMockWebGraphicsContext3D):
        (WTF::MockLayerTreeHostClient::create):
        (WTF::MockLayerTreeHostClient::animateAndLayout):
        (WTF::MockLayerTreeHostClient::createCompositorThread):
        (WTF::MockLayerTreeHostClient::createLayerTreeHostContext3D):