@@ -1,3 +1,15 @@
+2011-09-16  Nat Duca  <nduca@chromium.org>
+
+        [chromium] Create WebGL layer for graphics contexts on demand
+        https://bugs.webkit.org/show_bug.cgi?id=68288
+
+        Reviewed by James Robinson.
+
+        * src/GraphicsContext3DChromium.cpp:
+        (WebCore::GraphicsContext3DPrivate::GraphicsContext3DPrivate):
+        (WebCore::GraphicsContext3DPrivate::platformLayer):
+        * src/GraphicsContext3DPrivate.h:
+
 2011-09-16  chandra shekar v  <chandra.vallala@motorola.com>
 
         [chromium] compilation failed in target 'webkit_unit_tests'.
